[tool.poetry]
name = "style-transfer"
version = "0.1.0"
description = "Neural Network to generate an image with the content of one image and the style of another"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"
packages = [{include = "style_transfer"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
