[tool.poetry]
name = "style-transfer"
version = "0.1.0"
description = "Neural Network to generate an image with the content of one image and the style of another"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"
packages = [{include = "style-transfer"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.7.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "^2.12.0"
numpy = ">=1.22,<1.24"
scipy = "^1.10.1"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
