[tool.poetry]
name = "style_transfer_gs_2023"
version = "0.1.0"
description = "Neural Network to generate an image with the content of one image and the style of another"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = "^3.7.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "=2.10.0" # pinned to fix import issues with newer versions
numpy = ">=1.22,<1.24"
scipy = "^1.10.1"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
